--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>EnderGame</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="dephault.css" type="text/css">
 </head>
 
-<body>
+<body class="theme-dark">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
