--- a/test2.html
+++ b/test2.html
@@ -8,23 +8,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EnderGame</title>
-    <meta name="description" content="">
+    <title>test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="dephault.css" type="text/css">
-    
-  </head>
+</head>
 
-<body class="theme-dark">
+<body>
     <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    
-    <header>
-      <!--Nav-->
-      <?php include 'menu.php'; ?>
-
-    </header>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <canvas id="bg" style="position: fixed; top: 0; left: 0;"></canvas>
+    <script type="module" src="3d.js"></script>
 </body>
 
 </html>
