--- a/menu.html
+++ b/menu.html
@@ -2,14 +2,15 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 <iframe src="play.mcendergame.tk" onload="serverIsOn()" style="display:none" id="servergeter"></iframe>
 <link rel="stylesheet" href="menu.css" type="text/css"></link>
+<script src="./js/usermanager.js" type="module"></script>
 <a href="../index.html" class="title">EnderGame</a>
 <div class="content">
     <div class="server-statue-widget">
-        <p class="title">Server statue :</p>
+        <p class="title">Server statut :</p>
         <div class="statue">
             <div id="round"></div>
             <p class="text" id="server-statue-text">Loading...</p>
-            <script src="../menu.js" type="text/javascript"></script>
+            <script src="./menu.js"></script>
         </div>
     </div>
     <nav>
@@ -27,7 +28,7 @@
         </a>
     </nav>
     <a id="connect" href="register.html">
-        <div class="icon"></div>
-        <p>Se connecter</p>
+        <div class="icon" id="user-icon"></div>
+        <p id="user-name">Loading...</p>
+    </a>
 </div>
-</a>
