--- a/login.html
+++ b/login.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="login.css">
     </link>
     <script type="module" src="database.js"></script>
-    <link rel="stylesheet" href="menu.css" type="text/css">
-    </link>
+    <link rel="stylesheet" href="menu.css" type="text/css"></link>
     <script src='js/jquery-3.6.0.min.js'></script>
 </head>
 
@@ -27,7 +26,7 @@
         <![endif]-->
     <header id="menu">
         <!--Nav-->
-        <script>
+        <script type="module">
             $("#menu").load("menu.html");
         </script>
     </header>
@@ -39,7 +38,27 @@
                 <input class="input" type="text" name="email" id="email" placeholder="Votre Email" required><br />
                 <input class="input" type="password" name="password" id="password" placeholder="Mots de passe" required>
             </form>
-            <button class="button" id="formsend">Se connecter</button>
+            <div class="boutton-container">
+                <button class="button" id="google">
+                    <div class="google-icon"></div>
+                    <p>Google</p>
+                </button>
+                <button class="button" id="formsend">Se connecter</button>
+                <!---<button class="button" id="microsoft">Se connecter</button>-->
+            </div>
+
+
+        </div>
+        <script type="module">
+            import * as Authenticator from "./js/autenticator.js"; document.getElementById("formsend").addEventListener('click', function(){ Authenticator.LogIn(document.getElementById("email").value, document.getElementById("password").value); }); document.getElementById("google").addEventListener('click',
+            function(){ Authenticator.LogInWithGoogle()}); Authenticator.getCurrentUser();
+        </script>
+        <div class="register_link">
+            <p>Do you need an account ?</p>
+            <div class="register-link-button">
+                <a href="register.html">Create it</a>
+                <div class="icon"></div>
+            </div>
 
         </div>
 
@@ -47,10 +66,10 @@
         <section class="return_panel" id="return_panel">
             <p id="err_text"></p>
         </section>
+        <script>
+            $("#return_panel").load("../ressources/module/push/push-module.html")
+        </script>
     </section>
 </body>
-<script type="module">
-    import * as Authenticator from "./js/autenticator.js"; document.getElementById("formsend").addEventListener('click', function(){ Authenticator.LogIn(document.getElementById("email").value, document.getElementById("password").value); }); Authenticator.getCurrentUser();
-</script>
 
 </html>
