--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,9 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<iframe src="play.mcendergame.tk" onload="serverIsOn()" style="display:none" id="servergeter"></iframe>
+<iframe src="http://node02.myhoster.fr:25567" onload="serverIsOn()" style="display:none" id="servergeter"></iframe>
 <link rel="stylesheet" href="menu.css" type="text/css"></link>
 <script src="./js/usermanager.js" type="module"></script>
+<script type="module" src="./js/autenticator.js"></script>
 <a href="../index.html" class="title">EnderGame</a>
 <div class="content">
     <div class="server-statue-widget">
@@ -10,7 +11,7 @@
         <div class="statue">
             <div id="round"></div>
             <p class="text" id="server-statue-text">Loading...</p>
-            <script src="./menu.js"></script>
+            <script src="./servergeter.js"></script>
         </div>
     </div>
     <nav>
@@ -27,8 +28,23 @@
             <p>Button</p>
         </a>
     </nav>
-    <a id="connect" href="register.html">
-        <div class="icon" id="user-icon"></div>
-        <p id="user-name">Loading...</p>
-    </a>
+    <div id="connect">
+        <div class="content">
+            <div class="icon" id="user-icon"></div>
+            <p id="user-name">Loading...</p>
+        </div>
+
+        <div class="dropdown-close" id="menu-user-dropdown">
+            <div><span class="icon" style="background-image: var(--face-icon);"></span><a href="my-account.html">Mon compte</a></div>
+            <!---<div><span class="icon" style="background-image: var(--);"></span><a>test</a></div>---->
+            <div id="disconnection_button"><span class="icon" style="background-image: var(--leave-icon);"></span><a>Se deconnecter</a></div>
+        </div>
+    </div>
+    <script type="module">
+        import { updateDropdown } from "./js/usermanager.js";
+        import { Disconnect } from "./js/autenticator.js";
+        document.getElementById("connect").addEventListener("click",function(){ updateDropdown(); });
+        document.getElementById("disconnection_button").addEventListener("click",function(){Disconnect();})
+    </script>
+
 </div>
