--- a/register.html
+++ b/register.html
@@ -40,7 +40,26 @@
                 <input class="input" type="text" name="email" id="email" placeholder="Votre Email" required><br>
                 <input class="input" type="password" name="password" id="password" placeholder="Mots de passe" required>
             </form>
-            <button class="button" id="formsend">Créer</button>
+            <div class="boutton-container">
+                <button class="button" id="google">
+                    <div class="google-icon"></div>
+                    <p>Google</p>
+                </button>
+                <button class="button" id="formsend">Créer</button>
+                <!--<button class="button" id="microsoft">Se connecter</button>-->
+            </div>
+
+        </div>
+        <script type="module">
+            import * as Authenticator from "./js/autenticator.js"; document.getElementById("formsend").addEventListener('click', function(){ Authenticator.CreateAccount(document.getElementById("email").value, document.getElementById("password").value); }); document.getElementById("google").addEventListener('click',function(){
+            Authenticator.CreateAccountWithGoogle()}); Authenticator.getCurrentUser();
+        </script>
+        <div class="login_link">
+            <p>Do you want to connect to your account ?</p>
+            <div class="login-link-button">
+                <a href="login.html">Login</a>
+                <div class="icon"></div>
+            </div>
 
         </div>
 
@@ -48,6 +67,9 @@
         <section class="return_panel" id="return_panel">
             <p id="err_text"></p>
         </section>
+        <script>
+            $("#return_panel").load("../ressources/module/push/push-module.html")
+        </script>
     </section>
 </body>
 <script type="module">
