--- a/login.html
+++ b/login.html
@@ -70,9 +70,7 @@
         </div>
 
 
-        <section class="return_panel" id="return_panel">
-            <p id="err_text"></p>
-        </section>
+        <section class="return_panel" id="return_panel"></section>
         <script>
             $("#return_panel").load("../ressources/module/push/push-module.html")
         </script>
