--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
 
         <div class="dropdown-close" id="menu-user-dropdown">
             <div><span class="icon" style="background-image: var(--face-icon);"></span><a href="my-account.html">Mon compte</a></div>
-            <!---<div><span class="icon" style="background-image: var(--);"></span><a>test</a></div>---->
+            <div><span class="icon" style="background-image: var(--profile-favorite);"></span><a href="all-user.html">Utilisateurs</a></div>
             <div id="disconnection_button"><span class="icon" style="background-image: var(--leave-icon);"></span><a>Se deconnecter</a></div>
         </div>
     </div>
