--- a/index.html
+++ b/index.html
@@ -42,12 +42,52 @@
         <div class="image"></div>
         <p class="text">L'histoire a déjà commencé</p>
     </div>
-        <div class="island">
-            <script type="module" src="island.js"></script>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonumy</p>
-            <div id="island"></div>
+    <div class="play-container">
+            <p>Vous voulez jouer</p>
+            <div class="play-button-container">
+                <div class="button" id="play">
+                    <p>Jouer</p>
+                </div>
+                <div class="button" id="discord" onclick="window.open('https://discord.gg/AhGVjhNmHP')">
+                    <div class="discord-icon"></div>
+                    <p>Discord</p>
+                </div>
+            </div>
         </div>
+    <div class="island">
+        <script type="module" src="island.js"></script>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonumy</p>
+        <div id="island"></div>
+    </div>
     
+    <div id="ip-panel" class="hide">
+        <div id="link">
+            <div class="cross"></div>
+        </div>
+        <div class="container" >
+            <p class="title">Jouer :</p>
+            <div class="img-container">
+                <div class="img"></div>
+                <p class="ip"></p>
+                <script type="module" src="text-typing-animation.js"></script>
+            </div>
+
+        </div>
+    </div>
+    <script type="module">
+        import * as w from './text-typing-animation.js';
+        document.getElementById("link").addEventListener("click",function(){
+            document.getElementById("ip-panel").className = "hide"
+
+        })
+        document.getElementById("play").addEventListener("click",function(){
+            document.getElementById("ip-panel").className = "show";
+            setTimeout(() => {
+                w.wordflick(true);
+            }, 1000); 
+        })
+    </script>
+
 
 </body>
 
