--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
             </div>
         </div>
+    <script type="module" src="./node_modules/three/build/three.js"></script>
     <div class="island">
         <script type="module" src="island.js"></script>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonumy</p>
