add loading icon

--- a/my-account.html
+++ b/my-account.html
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="stats" id="stats">
-                        <p>stats</p>
+                        <div class="loading"></div>
                     </div>
                 </div>
             </div>
