--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
 <script src="./js/usermanager.js" type="module"></script>
 <script type="module" src="./js/autenticator.js"></script>
 <a href="../index.html" class="title">EnderGame</a>
+<script type="module" src="analytics.js"></script>
 <div class="content">
     <div class="server-statue-widget">
         <p class="title">Server statut :</p>
