--- a/register.html
+++ b/register.html
@@ -8,17 +8,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>EnderGame | Register</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dephault.css">
     </link>
     <link rel="stylesheet" href="register.css">
     </link>
-    <script type="module" src="database.js"></script>
     <link rel="stylesheet" href="menu.css" type="text/css">
     </link>
     <script src='js/jquery-3.6.0.min.js'></script>
+
 </head>
 
 <body class="theme-dark" onload="">
