--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="text">L'histoire a déjà commencé</p>
     </div>
     <div class="play-container">
-        <p>Vous voulez jouer</p>
+        <p>Nous rejoindre :</p>
         <div class="play-button-container">
             <div class="button" id="play">
                 <p>Jouer</p>
