--- a/menu.html
+++ b/menu.html
@@ -1,25 +1,25 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<link rel="stylesheet" href="menu.css" type="text/css"></link>
-<script src="./js/usermanager.js" type="module"></script>
-<script type="module" src="./js/autenticator.js"></script>
+<link rel="stylesheet" href="../menu.css" type="text/css"></link>
+<script src="../js/usermanager.js" type="module"></script>
+<script type="module" src="../js/autenticator.js"></script>
 <a href="../index.html" class="title">EnderGame</a>
 <iframe src="http://node03.myhoster.fr:30258" style="display:none;" id="servergeter"></iframe>
-<script type="module" src="analytics.js"></script>
+<script type="module" src="../analytics.js"></script>
 <div class="content" id="Menucontent" data-notif="false">
     <div class="server-statue-widget">
         <p class="title">Server statut :</p>
         <div class="statue">
             <div id="round"></div>
             <p class="text" id="server-statue-text">Loading...</p>
-            <script src="./servergeter.js"></script>
+            <script src="../servergeter.js"></script>
         </div>
     </div>
     <nav>
-        <a class="button" data-btn="index" href="../index.html" id="selected-button">
+        <a class="button" data-btn="index" href="../index.html">
             <p>Accueil</p>
         </a>
-        <a class="button" data-btn="blog" href="./blog.html">
+        <a class="button" data-btn="blog" href="../blog.html">
             <p>Blog</p>
         </a>
         <a class="button" data-btn="" href="">
@@ -31,7 +31,7 @@
     </nav>
     <script>
         var x = location.href.split("/").slice(-1);
-        if(x[0] == "blog.html"){
+        if(x[0] == "blog.html" || x[0].indexOf("blog/") != null){
             var bt = document.getElementsByClassName("button");
             for (let i = 0; i < bt.length; i++) {
                 console.log(bt[i].href);
@@ -53,17 +53,17 @@
         </div>
 
         <div class="dropdown-close" id="menu-user-dropdown">
-            <div><span class="icon" style="background-image: var(--face-icon);"></span><a href="my-account.html">Mon compte</a>
+            <div><span class="icon" style="background-image: var(--face-icon);"></span><a href="../my-account.html">Mon compte</a>
                 <div class="notification-round">
                     <p id="notif-count">0</p>
                 </div>
             </div>
-            <div><span class="icon" style="background-image: var(--profile-favorite);"></span><a href="all-user.html">Utilisateurs</a></div>
+            <div><span class="icon" style="background-image: var(--profile-favorite);"></span><a href="../all-user.html">Utilisateurs</a></div>
             <div id="disconnection_button"><span class="icon" style="background-image: var(--leave-icon);"></span><a>Se deconnecter</a></div>
         </div>
     </div>
     <script type="module">
-        import { updateDropdown } from "./js/usermanager.js"; import { Disconnect } from "./js/autenticator.js"; document.getElementById("connect").addEventListener("click",function(){ updateDropdown(); }); document.getElementById("disconnection_button").addEventListener("click",function(){Disconnect();})
+        import { updateDropdown } from "./js/usermanager.js"; import { Disconnect } from "../js/autenticator.js"; document.getElementById("connect").addEventListener("click",function(){ updateDropdown(); }); document.getElementById("disconnection_button").addEventListener("click",function(){Disconnect();})
     </script>
 
 </div>
