--- a/my-account.html
+++ b/my-account.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="page">
-        <div id="Account" data-ptoolopen="true">
+        <div id="Account" data-ptoolopen="false">
             <div class="card">
                 <div id="profile-picture" class="normal">
                     <div id="picture-edit"></div>
@@ -122,9 +122,24 @@
                                 <!--<div class="tag"><p>Admin</p></div>-->
                             </div>
                             <script type="module">
-                                import * as TagManager from "./js/tagsManager.js"; const Container = document.getElementById("tags-container"); TagManager.GetCurrentUserTags() .then((tags) => { if(tags != null) { Object.entries(tags).forEach(([tag, value]) => { console.log(tag); const
-                                Tag = document.createElement("div"); Tag.className = "tag"; Tag.style.backgroundColor = "var(--" + tag +"-bg-color)"; Tag.style.borderColor = "var(--" + tag +"-color)"; const TagValue = document.createElement("p"); TagValue.innerHTML
-                                = tag; Tag.appendChild(TagValue); Container.appendChild(Tag); }) }else{ const t = document.createElement("p"); t.innerHTML = "You don't have tags"; Container.appendChild(t); } })
+                                import * as TagManager from "./js/tagsManager.js";
+                                const Container = document.getElementById("tags-container");
+                                TagManager.GetCurrentUserTags().then((tags) => {
+                                    if(tags != null) { 
+                                        Object.entries(tags).forEach(([tag, value]) => {
+                                             const Tag = document.createElement("div");
+                                             Tag.className = "tag";
+                                             Tag.style.backgroundColor = "var(--" + tag.substring(0,tag.indexOf("(") != -1 ? tag.indexOf("(")-1: tag.length) +"-bg-color)"; 
+                                             Tag.style.borderColor = "var(--" + tag.substring(0,tag.indexOf("(") != -1 ? tag.indexOf("(")-1: tag.length) +"-color)";
+                                             const TagValue = document.createElement("p");
+                                             TagValue.innerHTML = tag; Tag.appendChild(TagValue); Container.appendChild(Tag);
+                                            })
+                                        }
+                                        else{
+                                            const t = document.createElement("p"); t.innerHTML = "You don't have tags";
+                                            Container.appendChild(t);
+                                         }
+                                        })
                             </script>
                         </div>
 
